[package]
name = "w25"
version = "0.1.0"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/w25-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for Winbond's W25 serial flash memory devices."
readme = "README.md"
keywords = ["flash", "storage", "spi", "memory", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/w25-rs"
documentation = "https://docs.rs/w25"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]

[badges]
travis-ci = { repository = "eldruin/w25-rs", branch = "master" }
coveralls = { repository = "eldruin/w25-rs", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[dependencies]
embedded-hal = "0.2.3"

[dev-dependencies]
linux-embedded-hal = "0.2"
embedded-hal-mock = "0.4"

[profile.release]
lto = true
